# 3DGScompresion_paper

./: .gitattributes  .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/skills/3dgs-deep-paper-reviewer/: SKILL.md
schemas/: batch-status.schema.json  failures.schema.json  innovation-review.schema.json  paper-analysis.schema.json  paper-source-pack.schema.json  retrieval-manifest.schema.json
skills/3dgs-paper-analyzer/: README.md  SKILL.md
skills/3dgs-paper-analyzer/assets/: article-template.html
skills/3dgs-paper-analyzer/examples/: innovation-review-request.md  sample-request.md
skills/3dgs-paper-analyzer/references/: 3dgs-analysis-schema.md  evidence-policy.md  innovation-review-mode.md  output-profiles.md  result-reporting.md
skills/3dgs-paper-analyzer/scripts/: create_analysis_stub.py  create_source_pack_stub.py  finalize_report.py  render_html.py  update_paper_index.py  validate_cross_mode_consistency.py  (+3 more)
skills/3dgs-paper-batch-orchestrator/: README.md  SKILL.md
skills/paper-maintain/: SKILL.md
skills/paper-retrieval-downloader/: README.md  SKILL.md
tests/: test_analysis_output.py  test_batch_source_pack_integration.py  test_batch_validation.py  test_cross_mode_consistency.py  test_finalize_report.py  test_html_mode_rendering.py  test_innovation_claim_contract.py  test_innovation_review_profile.py  test_innovation_review_validation.py  test_paper_index_update.py  test_related_paper_depth.py  test_retrieval_manifest.py  test_source_pack_reuse.py  test_source_pack_schema.py  test_standard_mode_content_contract.py
(+52 files in other folders)
